; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_angle.c_resize.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_angle.c_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_ctx = type { %struct.TYPE_2__*, i32, %struct.priv* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.priv = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ra_ctx*)* @resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resize(%struct.ra_ctx* %0) #0 {
  %2 = alloca %struct.ra_ctx*, align 8
  %3 = alloca %struct.priv*, align 8
  store %struct.ra_ctx* %0, %struct.ra_ctx** %2, align 8
  %4 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %5 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %4, i32 0, i32 2
  %6 = load %struct.priv*, %struct.priv** %5, align 8
  store %struct.priv* %6, %struct.priv** %3, align 8
  %7 = load %struct.priv*, %struct.priv** %3, align 8
  %8 = getelementptr inbounds %struct.priv, %struct.priv* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %13 = call i32 @d3d11_backbuffer_resize(%struct.ra_ctx* %12)
  br label %16

14:                                               ; preds = %1
  %15 = call i32 (...) @eglWaitClient()
  br label %16

16:                                               ; preds = %14, %11
  %17 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %18 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %21 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %26 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @ra_gl_ctx_resize(i32 %19, i32 %24, i32 %29, i32 0)
  ret void
}

declare dso_local i32 @d3d11_backbuffer_resize(%struct.ra_ctx*) #1

declare dso_local i32 @eglWaitClient(...) #1

declare dso_local i32 @ra_gl_ctx_resize(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
